--- a/src/features/Pages/Home/Home.css
+++ b/src/features/Pages/Home/Home.css
@@ -1,7 +1,7 @@
 .title {
   color: #fff;
   background-color: #000;
-  font-family: sans-serif;
+  font-family: verdana, sans-serif;
   text-align: center;
   padding: 2rem;
 }
