--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -8,3 +8,21 @@
 html {
   font-size: 62.5%;
 }
+
+body {
+  padding-top: 5rem;
+  position: relative;
+}
+
+h1 {
+  font-size: 2.4rem;
+}
+
+h2 {
+  font-size: 1.8em;
+}
+
+p {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
