--- a/src/features/forms/MenuItem/MenuItem.css
+++ b/src/features/forms/MenuItem/MenuItem.css
@@ -1,30 +1,22 @@
 .container {
-  border: 0.1rem solid #eeeeee;
-  display: flex;
-  flex-direction: column;
-  padding: 1.5rem;
-  margin: 5rem auto 0 auto;
-  width: 90%;
+  box-shadow: 0 0.05rem 0.75rem 0.05rem #b2b2b2;
+  width: 92%;
   max-width: 70rem;
 }
 
 .item {
+  border-bottom: 0.1rem solid #eeeeee;
   display: flex;
   justify-content: space-between;
+  padding: 1.5rem;
 }
 
 .price {
   padding-left: 2rem;
 }
 
-.hr {
-  background-color: #eeeeee;
-  border: none;
-  padding: 0.05rem;
-  margin: 1.5rem 0;
-}
-
-.descriptionWrapper {
-  height: 12rem;
+.description {
+  height: 10rem;
   overflow-y: auto;
+  padding: 1.5rem;
 }
