--- a/src/features/layout/Legend/Legend.css
+++ b/src/features/layout/Legend/Legend.css
@@ -1,15 +1,17 @@
 .legend {
-  box-shadow: 0 0.05rem 0.75rem 0.05rem #b2b2b2;
-  list-style: none;
+  /* box-shadow: 0 0.05rem 0.75rem 0.05rem #b2b2b2; */
+
   font-size: 1.5rem;
-  width: 25rem;
+  list-style: none;
+  margin: 2rem 0;
   padding: 0;
-  margin-bottom: 5rem;
+  width: 100%;
 }
 
 .legend > li {
   border-bottom: 0.1rem solid #eeeeee;
-  padding: 1.5rem;
   display: flex;
-  justify-content: space-between;
+  flex: auto;
+  justify-content: center;
+  padding: 1.5rem;
 }
