--- a/src/features/forms/Options/Options.css
+++ b/src/features/forms/Options/Options.css
@@ -1,14 +1,6 @@
-.container {
-  align-items: center;
-  border-top: 0.1rem solid #eeeeee;
-  display: flex;
-  justify-content: space-between;
-  padding: 1.5rem;
-}
-
 .options {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .optionsLabel {
