--- a/src/features/layout/Legend/Legend.css
+++ b/src/features/layout/Legend/Legend.css
@@ -1,6 +1,7 @@
 .legend {
   /* box-shadow: 0 0.05rem 0.75rem 0.05rem #b2b2b2; */
-
+  display: flex;
+  flex-wrap: wrap;
   font-size: 1.5rem;
   list-style: none;
   margin: 2rem 0;
