--- a/src/features/layout/Legend/Legend.css
+++ b/src/features/layout/Legend/Legend.css
@@ -4,8 +4,7 @@
   flex-wrap: wrap;
   font-size: 1.5rem;
   list-style: none;
-  margin: 2rem 0;
-  padding: 0;
+  padding: 2rem 0;
   width: 100%;
 }
 
