--- a/src/features/layout/Legend/Legend.css
+++ b/src/features/layout/Legend/Legend.css
@@ -1,18 +1,7 @@
 .legend {
   /* box-shadow: 0 0.05rem 0.75rem 0.05rem #b2b2b2; */
-  display: flex;
-  flex-wrap: wrap;
   font-size: 1.5rem;
   list-style: none;
   padding: 2rem 0;
-  width: 100%;
-}
-
-.legend > li {
-  align-items: center;
-  border-bottom: 0.1rem solid #eeeeee;
-  display: flex;
-  flex: auto;
-  justify-content: center;
-  padding: 1.5rem;
+  width: 24rem;
 }
