--- a/src/features/forms/MenuItemCard/MenuItemCard.css
+++ b/src/features/forms/MenuItemCard/MenuItemCard.css
@@ -6,17 +6,25 @@
 
 .header {
   border-bottom: 0.1rem solid #eeeeee;
+  padding: 2rem;
+}
+
+.item {
   display: flex;
   justify-content: space-between;
-  padding: 1.5rem;
+  padding-bottom: 1rem;
+}
+
+.flags {
+  display: flex;
+  padding: 0;
 }
 
 .footer {
-  align-items: center;
-  border-top: 0.1rem solid #eeeeee;
   display: flex;
-  justify-content: space-between;
-  padding: 1.5rem;
+  flex-direction: column;
+  border-top: 0.1rem solid #eeeeee;
+  padding: 2rem;
 }
 
 .price {
@@ -24,12 +32,31 @@
 }
 
 .description {
-  height: 12rem;
-  overflow-y: auto;
-  padding: 1.5rem;
+  padding: 2rem;
+}
+
+.buttons {
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  height: 10rem;
+  justify-content: space-between;
+  max-width: 20rem;
 }
 
 .options {
   display: flex;
   flex-direction: column;
+  padding-bottom: 2rem;
+}
+
+@media (min-width: 576px) {
+  .footer {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .buttons {
+    margin-left: auto;
+  }
 }
