--- a/src/features/Pages/Menu/Menu.css
+++ b/src/features/Pages/Menu/Menu.css
@@ -1,4 +1,4 @@
-.container {
+.section {
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -7,12 +7,7 @@
   padding: 2rem;
 }
 
-.title {
+.article {
   padding: 2rem 0;
-}
-
-.content {
   width: 100%;
-  flex-wrap: wrap;
-  padding: 2rem 0;
 }
