--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -9,7 +9,7 @@ html {
   font-size: 62.5%;
 }
 
-body {
+main {
   padding-top: 5.5rem;
   position: relative;
 }
@@ -22,7 +22,8 @@ h2 {
   font-size: 1.8em;
 }
 
-p {
+p,
+li {
   font-size: 1.5rem;
   line-height: 2.25rem;
 }
