--- a/src/features/buttons/Quantity.css
+++ b/src/features/buttons/Quantity.css
@@ -3,7 +3,7 @@
 }
 
 .button,
-.quantity {
+.input {
   font-size: 1.5rem;
 }
 
@@ -14,7 +14,7 @@
   padding: 1rem 2rem;
 }
 
-.quantity {
+.input {
   border: 0.1rem solid #008080;
   padding: 1rem;
   text-align: center;
