--- a/src/features/layout/Header.css
+++ b/src/features/layout/Header.css
@@ -1,6 +1,6 @@
 .header {
   align-items: center;
-  background-color: #008080;
+  background-color: #006e7d;
   box-shadow: 0 0.05rem 0.75rem 0.05rem #323232;
   display: flex;
   justify-content: space-between;
