--- a/src/features/buttons/Quantity.css
+++ b/src/features/buttons/Quantity.css
@@ -8,14 +8,14 @@
 }
 
 .button {
-  background-color: #008080;
-  border: 0.1rem solid #008080;
+  background-color: #006e7d;
+  border: 0.1rem solid #006e7d;
   color: #fff;
   padding: 1rem 2rem;
 }
 
 .input {
-  border: 0.1rem solid #008080;
+  border: 0.1rem solid #006e7d;
   padding: 1rem;
   text-align: center;
   width: 100%;
