Added functionality for checkboxes

--- a/src/features/buttons/Hamburger.css
+++ b/src/features/buttons/Hamburger.css
@@ -4,12 +4,13 @@
   cursor: pointer;
   display: flex;
   flex-direction: column;
+  height: 1.5rem;
+  justify-content: space-between;
   padding: 0;
 }
 
 .bar {
   background-color: #fff;
   padding: 0.1rem 0;
-  margin: 0.2rem 0;
-  width: 2.25rem;
+  width: 2.5rem;
 }
