--- a/src/features/layout/MealCard.css
+++ b/src/features/layout/MealCard.css
@@ -11,6 +11,7 @@
 
 .title {
   display: flex;
+  font-size: 1.8rem;
   justify-content: space-between;
   padding-bottom: 2rem;
 }
@@ -42,7 +43,7 @@
   flex-direction: column;
   height: 10rem;
   justify-content: space-between;
-  max-width: 20rem;
+  max-width: 18rem;
 }
 
 .options {
