--- a/src/components/buttons/Hamburger.css
+++ b/src/components/buttons/Hamburger.css
@@ -1,4 +1,4 @@
-.hamburger {
+.button {
   background: transparent;
   border: none;
   cursor: pointer;
@@ -9,7 +9,7 @@
   padding: 0;
 }
 
-.bar {
+.span {
   background-color: #fff;
   padding: 0.1rem 0;
   width: 2.5rem;
