--- a/src/components/forms/DeliveryTypeForm.css
+++ b/src/components/forms/DeliveryTypeForm.css
@@ -1,6 +1,6 @@
 .form {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   padding: 2rem 0;
   width: 100%;
 }
