refactored cart state, added quantityTotal and priceTotals

--- a/src/components/inputs/TextField.css
+++ b/src/components/inputs/TextField.css
@@ -1,10 +1,29 @@
 .input {
-  border-bottom: 0.1rem solid #006e7d;
+  border-bottom: 0.1rem solid #a8a8a8;
   border-left: none;
   border-right: none;
   border-top: none;
   font-size: 1.5rem;
-  margin: 1rem 0;
-  padding: 0.5rem 1rem;
+  outline: none;
+  padding: 2.5rem 1rem 1rem 1rem;
+  transition: all 0.4s ease;
   width: 100%;
+}
+
+.input::placeholder {
+  color: #b2b2b2;
+  font-style: italic;
+}
+
+.input:active,
+.input:focus {
+  border-bottom: 0.1rem solid #006e7d;
+  transition: all 0.4s ease;
+}
+
+.input:disabled {
+  /* background-color: rgba(178, 178, 178, 0.2); */
+  /* background-color: #ededed; */
+  opacity: 0.2;
+  transition: all 0.4s ease;
 }
