more hex color changes

--- a/src/components/layout/MealCard.css
+++ b/src/components/layout/MealCard.css
@@ -1,5 +1,5 @@
 .article {
-  box-shadow: 0 0.05rem 0.75rem 0.05rem #bdbdbd;
+  box-shadow: 0 0.05rem 0.75rem 0.05rem #b3b3b3;
   margin: 2rem 0;
   width: 100%;
 }
