--- a/src/components/inputs/TextField.css
+++ b/src/components/inputs/TextField.css
@@ -1,5 +1,5 @@
 .input {
-  border-bottom: 0.1rem solid #bdbdbd;
+  border-bottom: 0.1rem solid #b3b3b3;
   border-left: none;
   border-right: none;
   border-top: none;
@@ -11,7 +11,7 @@
 }
 
 .input::placeholder {
-  color: #dbdbdb;
+  color: #c7c7c7;
   font-style: italic;
 }
 
