--- a/src/components/tables/CartTableHeader.css
+++ b/src/components/tables/CartTableHeader.css
@@ -1,5 +1,6 @@
 .tr {
-  border-bottom: 0.1rem solid #eee;
+  border-bottom: 0.1rem solid #006e7d;
+  border-top: 0.1rem solid #006e7d;
   color: #b3b3b3;
   font-weight: 700;
   font-size: 1.6rem;
