--- a/src/components/inputs/TextField.css
+++ b/src/components/inputs/TextField.css
@@ -12,7 +12,7 @@
 }
 
 .input::placeholder {
-  color: #c7c7c7;
+  color: #b3b3b3;
   font-style: italic;
 }
 
@@ -24,5 +24,6 @@
 
 .input:disabled {
   color: #000;
+  border-bottom: 0.1rem solid #eee;
   transition: all 0.4s ease;
 }
