--- a/src/components/layout/Header.css
+++ b/src/components/layout/Header.css
@@ -5,11 +5,10 @@
   display: flex;
   height: 6rem;
   justify-content: space-between;
-  left: 0;
   padding: 0 2rem;
   position: fixed;
-  right: 0;
   top: 0;
+  width: 100%;
   z-index: 99;
 }
 
