--- a/src/components/tables/CartTableFooter.css
+++ b/src/components/tables/CartTableFooter.css
@@ -1,5 +1,6 @@
 .tr {
-  border-bottom: 0.1rem solid #eee;
+  border-bottom: 0.1rem solid #006e7d;
+  border-top: 0.1rem solid #006e7d;
   font-weight: 700;
   font-size: 1.6rem;
   height: 3.5rem;
