--- a/src/components/tables/CartTable.css
+++ b/src/components/tables/CartTable.css
@@ -5,3 +5,50 @@
   table-layout: fixed;
   width: 100%;
 }
+
+.tr {
+  animation-duration: 0.5s;
+  animation-name: fadeIn;
+  vertical-align: center;
+  height: 5.8rem;
+  font-size: 1.4rem;
+  font-weight: 700;
+  transition: all 0.5s ease;
+}
+
+.none {
+  animation-name: fadeOut;
+  animation-duration: 0.5s;
+}
+
+.deliveryFee {
+  text-align: right;
+}
+
+@keyframes fadeIn {
+  from {
+    font-size: 0;
+    height: 0;
+    opacity: 0;
+  }
+
+  to {
+    font-size: 1.4rem;
+    height: 5.8rem;
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    font-size: 1.4rem;
+    height: 5.8rem;
+    opacity: 1;
+  }
+
+  to {
+    font-size: 0;
+    height: 0;
+    opacity: 0;
+  }
+}
