--- a/src/components/inputs/TextField.css
+++ b/src/components/inputs/TextField.css
@@ -24,6 +24,7 @@
 
 .input:disabled {
   color: #000;
+  background-color: transparent;
   border-bottom: 0.1rem solid #eee;
   transition: all 0.4s ease;
 }
