--- a/src/components/pages/Cart.css
+++ b/src/components/pages/Cart.css
@@ -15,3 +15,14 @@
   text-align: center;
   text-transform: uppercase;
 }
+
+.button {
+  margin-top: 5rem;
+  width: 100%;
+  max-width: 40rem;
+}
+
+.hr {
+  border: 0.05rem solid #006e7d;
+  margin: 4rem 0;
+}
