--- a/src/components/layout/MealFlag.css
+++ b/src/components/layout/MealFlag.css
@@ -2,7 +2,7 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  font-size: 1.2rem;
+  font-size: var(--font-size-12);
   padding-right: 2rem;
 }
 
