--- a/src/components/tables/CartTableFooter.css
+++ b/src/components/tables/CartTableFooter.css
@@ -1,15 +1,16 @@
 .tr {
   border-bottom: 0.1rem solid #eee;
   border-top: 0.1rem solid #eee;
+  color: #b3b3b3;
   height: 5rem;
   text-transform: uppercase;
 }
 
 .total {
-  color: #b3b3b3;
   text-align: left;
 }
 
 .price {
+  font-family: var(--montserrat-bold);
   text-align: right;
 }
