--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -27,7 +27,8 @@ label,
 li,
 input,
 p,
-td {
+td,
+span {
   font-family: var(--montserrat);
   font-weight: var(--regular);
   font-size: var(--font-size-14);
@@ -74,7 +75,8 @@ input::placeholder {
   input,
   p,
   td,
-  th {
+  th,
+  span {
     font-size: var(--font-size-15);
     line-height: 2.75rem;
   }
@@ -106,7 +108,8 @@ input::placeholder {
   input,
   p,
   td,
-  th {
+  th,
+  span {
     font-size: var(--font-size-16);
     line-height: 3rem;
   }
@@ -138,7 +141,8 @@ input::placeholder {
   input,
   p,
   td,
-  th {
+  th,
+  span {
     font-size: var(--font-size-17);
     line-height: 3.25rem;
   }
