--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -27,8 +27,7 @@ label,
 li,
 input,
 p,
-td,
-span {
+td {
   font-family: var(--montserrat);
   font-weight: var(--regular);
   font-size: var(--font-size-14);
@@ -75,8 +74,7 @@ input::placeholder {
   input,
   p,
   td,
-  th,
-  span {
+  th {
     font-size: var(--font-size-15);
     line-height: 2.75rem;
   }
@@ -108,8 +106,7 @@ input::placeholder {
   input,
   p,
   td,
-  th,
-  span {
+  th {
     font-size: var(--font-size-16);
     line-height: 3rem;
   }
@@ -141,8 +138,7 @@ input::placeholder {
   input,
   p,
   td,
-  th,
-  span {
+  th {
     font-size: var(--font-size-17);
     line-height: 3.25rem;
   }
