--- a/src/components/tables/CartTableRow.css
+++ b/src/components/tables/CartTableRow.css
@@ -12,6 +12,8 @@
 }
 
 .li {
+  font-size: var(--font-size-12);
+  font-style: var(--italic);
   padding-top: 1rem;
 }
 
@@ -22,4 +24,22 @@
 
 .totals {
   text-align: right;
+}
+
+@media (min-width: 576px) {
+  .li {
+    font-size: var(--font-size-13);
+  }
+}
+
+@media (min-width: 768px) {
+  .li {
+    font-size: var(--font-size-14);
+  }
+}
+
+@media (min-width: 992px) {
+  .li {
+    font-size: var(--font-size-15);
+  }
 }
