--- a/src/components/inputs/Radio.css
+++ b/src/components/inputs/Radio.css
@@ -1,5 +1,6 @@
 .label,
 .labelChecked {
+  font-family: var(--montserrat-semi-bold);
   padding: 1rem 4rem 1rem 1rem;
   position: relative;
   transition: all 0.6s ease;
